# XFUND_generator

./: .flake8  .gitignore  COMPLETE_TEST_GUIDE.md  Makefile  README.md  list_test_commands.sh  main.py  pyproject.toml  pytest.ini  run_all_tests.py
.github/workflows/: ci.yml  release.yml
bash/: test.sh
config/: README.md  augmentation_config.yaml  defaults.yaml  example_config.json  field_mappings.yaml  label_keywords.yaml
config/augmentation_presets/: easy.yaml  extreme.yaml  hard.yaml  medium.yaml
config/sample_layouts/: medical.yaml
docs/: FORM_REFACTORING_SUMMARY.md  PYDANTIC_GUIDE.md  PYDANTIC_IMPROVEMENT_SUMMARY.md  README.md  WHY_UNIFIED_JSON_METHODS.md  XFUND_FORM_INTEGRATION_SUMMARY.md  getting_started.md  installation.md  troubleshooting.md
docs/examples/: advanced.md  basic.md
docs/reference/: api.md  cli.md
logs/: ocr_recognition_results.txt
src/: __init__.py  augmentations.py  docx_utils.py  form.py  generate_dataset.py  models.py  utils.py  xfund_form_integration.py
src/form/: funsd.py  wildreceipt.py  xfund.py
tests/: README.md  conftest.py  test_augmentations.py  test_bbox_improvements.py  test_form_classes.py  test_generator.py  test_integration.py  test_pydantic_models.py
wiki/: API-Reference.md  Annotation-Formats.md  Configuration.md  Contributing.md  Getting-Started.md  Home.md  Installation.md  README.md  Testing.md  _Sidebar.md
xfund_generator/: __init__.py  __main__.py  augmentations.py  docx_utils.py  form.py  generate_dataset.py  models.py  renderer.py  utils.py  xfund_form_integration.py
xfund_generator/form/: __init__.py  base.py  funsd.py  wildreceipt.py  xfund.py
