[project]
name = "xfund-generator"
version = "0.1.0"
description = "XFUND generator for document OCR, annotation, and semantic evaluation"
readme = "README.md"
requires-python = ">=3.9"

dependencies =[
    "albumentations>=2.0.8",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "pandas==2.0.3",
    "pdf2image>=1.17.0",
    "pydantic>=2.12.4",
    "python-docs>=0.1.0",
    "reportlab>=4.4.4",
]
[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "black==23.7.0",
    "flake8==6.0.0"
]

[dependency-groups]
dev = [
    "black>=23.7.0",
    "flake8>=6.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
